# inno_2016_data_mining_paper

./: README.md  classes.py  classifier.py  evaluation.py  pos_neg_rules_classifier.py  results_final.csv  rules_stats.txt  utils.py  validator.py
kingfisher/: CMakeLists.txt  bitmatrice.c  bitmatrice.h  brules.c  brules.h  glob.c  glob.h  kingfisher.c  measures.c  measures.h
results/: notes_split.txt  notes_stratified_split_with_right_params (copy).txt  notes_stratified_split_with_right_params.txt  results2016-11-14T15:42:58.034270.csv  results2016-11-14T15:57:55.723983.csv  results2016-11-14T16:39:47.777713.csv  results2016-11-14T18:55:25.423905.csv  results2016-11-15T00:29:32.493232.csv  results2016-11-15T16:51:32.009212.csv  results2016-11-15T16:58:14.979327.csv  results2016-11-15T16:58:56.117704.csv
rules/adult/: train10_rules.txt  train1_rules.txt  train2_rules.txt  train3_rules.txt  train4_rules.txt  train5_rules.txt  train6_rules.txt  train7_rules.txt  train8_rules.txt  train9_rules.txt
rules/breast/: train10_rules.txt  train1_rules.txt  train2_rules.txt  train3_rules.txt  train4_rules.txt  train5_rules.txt  train6_rules.txt  train7_rules.txt  train8_rules.txt  train9_rules.txt
rules/flare/: train10_rules.txt  train1_rules.txt  train2_rules.txt  train3_rules.txt  train4_rules.txt  train5_rules.txt  train6_rules.txt  train7_rules.txt  train8_rules.txt  train9_rules.txt
rules/heart/: train10_rules.txt  train1_rules.txt  train2_rules.txt  train3_rules.txt  train4_rules.txt  train5_rules.txt  train6_rules.txt  train7_rules.txt  train8_rules.txt  (+1 more)
(+725 files in other folders)
